# music-mcp-server

./: README.md  UV_INTRO.md  auth.py  pyproject.toml  requirements.txt  server.py  test_mcp.py
.github/: copilot-instructions.md
music_mcp_server/: __init__.py  server.py  setup.py
